--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       rel="stylesheet"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="icon" href="/public/Favicon2.ico" />
     <title>Journal Tracker</title>
   </head>
   <body>
