--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="icon" href="/public/Favicon2.ico" />
-    <title>Journal Tracker</title>
+    <title>MindMeld</title>
   </head>
   <body>
     <div id="root"></div>
